Fix optimization-unstable code involving signed integer overflow

XMLWordPrintable

    • b04
    • generic
    • generic

        Optimization-unstable code (unstable code for short) is an emerging class of software bugs: code that is unexpectedly eliminated by compiler optimizations due to undefined behavior in the program.

         

        We applied a static checker STACK [1] to OpenJDK and found a number of such unstable code.

         

        [1] https://css.csail.mit.edu/stack/

              Assignee:
              Eric Liu
              Reporter:
              Eric Liu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: