8258946: Fix optimization-unstable code involving signed integer overflow

Optimization-unstable code refers to code that is unexpectedly discarded
by compiler optimizations due to undefined behavior in the program.

We applied a static checker called STACK (prototype from SOSP'13 paper
[1]) to OpenJDK source code and found the following six sites of
potential unstable code involving signed integer overflow.

Removing undefined behaviors would make the code stable.

[1] https://css.csail.mit.edu/stack/